[gd_scene load_steps=2 format=2]

[ext_resource path="res://game/menus/settings/profiles/ProfilesTab.gd" type="Script" id=1]

[node name="Profiles" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Top" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 1280.0
margin_bottom = 24.0

[node name="LoadButton" type="MenuButton" parent="VBoxContainer/Top"]
margin_right = 87.0
margin_bottom = 24.0
text = "Load Profile"
flat = false

[node name="SaveAs" type="Button" parent="VBoxContainer/Top"]
margin_left = 91.0
margin_right = 160.0
margin_bottom = 24.0
text = "Save As: "

[node name="LineEdit" type="LineEdit" parent="VBoxContainer/Top"]
margin_left = 164.0
margin_right = 1176.0
margin_bottom = 24.0
size_flags_horizontal = 3
caret_blink = true
caret_blink_speed = 0.5

[node name="Delete" type="Button" parent="VBoxContainer/Top"]
margin_left = 1180.0
margin_right = 1280.0
margin_bottom = 24.0
text = "Delete Profile"

[node name="MatchCount" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 28.0
margin_right = 1280.0
margin_bottom = 52.0

[node name="Label" type="Label" parent="VBoxContainer/MatchCount"]
margin_top = 5.0
margin_right = 125.0
margin_bottom = 19.0
text = "Entries must match"

[node name="SpinBox" type="SpinBox" parent="VBoxContainer/MatchCount"]
margin_left = 129.0
margin_right = 203.0
margin_bottom = 24.0
min_value = 1.0
max_value = 3.0
value = 1.0

[node name="Label2" type="Label" parent="VBoxContainer/MatchCount"]
margin_left = 207.0
margin_top = 5.0
margin_right = 1180.0
margin_bottom = 19.0
size_flags_horizontal = 3
text = "fields to be included."

[node name="HelpButton" type="Button" parent="VBoxContainer/MatchCount"]
margin_left = 1184.0
margin_right = 1280.0
margin_bottom = 24.0
size_flags_horizontal = 8
text = "What is This?"

[node name="Config" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 56.0
margin_right = 1280.0
margin_bottom = 720.0
size_flags_vertical = 3

[node name="Categories" type="PanelContainer" parent="VBoxContainer/Config"]
margin_right = 424.0
margin_bottom = 664.0
size_flags_horizontal = 3

[node name="SC" type="ScrollContainer" parent="VBoxContainer/Config/Categories"]
margin_left = 7.0
margin_top = 7.0
margin_right = 417.0
margin_bottom = 657.0

[node name="List" type="VBoxContainer" parent="VBoxContainer/Config/Categories/SC"]
margin_right = 410.0
size_flags_horizontal = 3

[node name="Sources" type="PanelContainer" parent="VBoxContainer/Config"]
margin_left = 428.0
margin_right = 852.0
margin_bottom = 664.0
size_flags_horizontal = 3

[node name="SC" type="ScrollContainer" parent="VBoxContainer/Config/Sources"]
margin_left = 7.0
margin_top = 7.0
margin_right = 417.0
margin_bottom = 657.0

[node name="List" type="VBoxContainer" parent="VBoxContainer/Config/Sources/SC"]
margin_right = 410.0
size_flags_horizontal = 3

[node name="Files" type="PanelContainer" parent="VBoxContainer/Config"]
margin_left = 856.0
margin_right = 1280.0
margin_bottom = 664.0
size_flags_horizontal = 3

[node name="SC" type="ScrollContainer" parent="VBoxContainer/Config/Files"]
margin_left = 7.0
margin_top = 7.0
margin_right = 417.0
margin_bottom = 657.0

[node name="List" type="VBoxContainer" parent="VBoxContainer/Config/Files/SC"]
margin_right = 410.0
size_flags_horizontal = 3

[node name="SaveName" type="AcceptDialog" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -82.5
margin_top = -46.0
margin_right = 82.5
margin_bottom = 46.0
resizable = true
dialog_text = "Invalid Save Name"
dialog_autowrap = true

[node name="HelpWindow" type="AcceptDialog" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -275.0
margin_top = -241.5
margin_right = 275.0
margin_bottom = 241.5
window_title = "Profiles"
dialog_text = "Profiles allow you to customize what entries can appear in a given game.

The first column lists the Catgeories, the second lists the Sources, and the third lists the files the entries were read from.

Select the checkboxes for each of the the three that you want to appear in the game when this profile is used, and select how many fields must be matched for an entry to appear.

For example, if you want to only show entiries in the Category \"Character\" and in a certain Source, you check that catgory and source, and set the number to 2.

If you only want to use the entries from a specific file, you can enable only that and set the number to 1"
dialog_autowrap = true
[connection signal="pressed" from="VBoxContainer/Top/SaveAs" to="." method="_on_SaveAs_pressed"]
[connection signal="pressed" from="VBoxContainer/Top/Delete" to="." method="_on_Delete_pressed"]
[connection signal="pressed" from="VBoxContainer/MatchCount/HelpButton" to="." method="_on_HelpButton_pressed"]
